math-core/src/snapshots/math_core__tests__sine_function_brackets.snap
---
source: math-core/src/lib.rs
expression: "\\sin\\{x\\}"
---
<math>
    <mo lspace="0" rspace="0">sin</mo>
    <mo stretchy="false">{</mo>
    <mi>x</mi>
    <mo stretchy="false">}</mo>
</math>
