math-core/src/snapshots/math_core__tests__sine_function_stretch_parens.snap
---
source: math-core/src/lib.rs
expression: "\\sin\\left(x\\right)"
---
<math>
    <mo lspace="0" rspace="0">sin</mo>
    <mrow>
        <mo>(</mo>
        <mi>x</mi>
        <mo>)</mo>
    </mrow>
</math>
