math-core/src/snapshots/math_core__tests__sine_sine.snap
---
source: math-core/src/lib.rs
expression: "\\sin\\sin x"
---
<math>
    <mo lspace="0" rspace="0.1667em">sin</mo>
    <mo lspace="0" rspace="0.1667em">sin</mo>
    <mi>x</mi>
</math>
