math-core/src/snapshots/math_core__tests__slashed.snap
---
source: math-core/src/lib.rs
expression: "\\slashed{\\partial}"
---
<math>
    <mi>∂&#x0338;</mi>
</math>
