math-core/src/snapshots/math_core__tests__slightly_more_complex_fraction.snap
---
source: math-core/src/lib.rs
expression: "\\frac{12}{5}"
---
<math>
    <mfrac>
        <mn>12</mn>
        <mn>5</mn>
    </mfrac>
</math>
