math-core/src/snapshots/math_core__tests__spaces_in_env_name.snap
---
source: math-core/src/lib.rs
expression: "\\begin{  pmatrix   } x \\\\ y \\end{pmatrix}"
---
Position: 6
UnknownEnvironment(
    "  pmatrix   ",
)
