math-core/src/snapshots/math_core__tests__spacing_with_spaces.snap
---
source: math-core/src/lib.rs
expression: "x\\;\\Longrightarrow\\; ="
---
<math>
    <mi>x</mi>
    <mspace width="0.2777778em"/>
    <mo>⟹</mo>
    <mspace width="0.2777778em"/>
    <mo lspace="0">=</mo>
</math>
