math-core/src/snapshots/math_core__tests__special_symbols.snap
---
source: math-core/src/lib.rs
expression: "\\%\\$\\#"
---
<math>
    <mi>%</mi>
    <mi>$</mi>
    <mi>#</mi>
</math>
