math-core/src/snapshots/math_core__tests__sqrt_equal_three.snap
---
source: math-core/src/lib.rs
expression: "\\sqrt{=3}"
---
<math>
    <msqrt>
        <mrow>
            <mo lspace="0">=</mo>
            <mn>3</mn>
        </mrow>
    </msqrt>
</math>
